--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="col-2">
           <img
-            src="BallonIncWeatherService/src/images/UGotAMessage.png"
+            src="src/images/UGotAMessage.png"
             alt="credence-balloon"
             width="400px"
           />
