--- a/index.html
+++ b/index.html
@@ -13,51 +13,53 @@
   </head>
   <body>
     <div class="container">
-      <h1>Credence Balloon Inc. Weather Service</h1>
-      <div class="row">
-        <div class="col-8">
-          <div class="block-1">
-            <input type="text" id="search" placeholder="Type in your city..." />
-            <button>Search</button>
-            <button>Current Location</button>
-          </div>
-          <div class="weather-today-block">
-            <div class="row">
-              <div class="col-6">
-                <img
-                  src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png"
-                  alt="rain"
-                  width="128px"
-                />
-              </div>
-              <div class="col-3">
-                <ul>
-                  <li>Stadt</li>
-                  <li>Datum/Uhrzeit</li>
-                  <li>Temperatur in Celsius/Fahrenheit</li>
-                  <li>Zustand: Regen</li>
-                  <li>Luftfeuchtigkeit</li>
-                </ul>
+      <div class="weather-app">
+        <h1>Credence Balloon Inc. Weather Service</h1>
+        <div class="block-1">
+          <input type="text" id="search" placeholder="Type in your city..." />
+          <button>Search</button>
+          <button>Current Location</button>
+        </div>
+        <div class="row">
+          <div class="col-8">
+            <div class="weather-today-block">
+              <div class="row">
+                <div class="col-6">
+                  <img
+                    src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png"
+                    alt="rain"
+                    width="128px"
+                  />
+                </div>
+                <div class="col-3">
+                  <ul>
+                    <li>Stadt</li>
+                    <li>Datum/Uhrzeit</li>
+                    <li>Temperatur in Celsius/Fahrenheit</li>
+                    <li>Zustand: Regen</li>
+                    <li>Luftfeuchtigkeit</li>
+                  </ul>
+                </div>
               </div>
             </div>
+            <div class="weather-forecast-block"></div>
           </div>
-          <div class="weather-forecast-block"></div>
+          <div class="col-2">
+            <img
+              src="src/images/UGotAMessage.png"
+              alt="credence-balloon"
+              width="400px"
+            />
+          </div>
         </div>
-        <div class="col-2">
-          <img
-            src="src/images/UGotAMessage.png"
-            alt="credence-balloon"
-            width="400px"
-          />
-        </div>
+        <small>
+          <a
+            href="https://github.com/Quaffi/BalloonIncWeatherService"
+            target="_blank"
+            >Open-source code </a
+          >by Stefanie Walch</small
+        >
       </div>
-      <small>
-        <a
-          href="https://github.com/Quaffi/BalloonIncWeatherService"
-          target="_blank"
-          >Open-source code </a
-        >by Stefanie Walch</small
-      >
     </div>
     <script src="src/app.js"></script>
   </body>
