--- a/index.html
+++ b/index.html
@@ -11,32 +11,27 @@
     />
     <title>🎈 Balloon Inc Weather Service</title>
   </head>
-  <body>
+  <body class="body">
     <div class="container">
       <div class="weather-app">
-        <h1>Credence Balloon Inc. Weather Service</h1>
+        <h1 class="headline">Credence Balloon Inc. Weather Service</h1>
         <div class="block-1">
           <input type="text" id="search" placeholder="Type in your city..." />
-          <button>Search</button>
-          <button>Current Location</button>
+          <button class="search-button">Search</button>
         </div>
         <div class="row">
           <div class="col-8">
             <div class="weather-today-block">
               <div class="row">
                 <div class="col-6">
-                  <img
-                    src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png"
-                    alt="rain"
-                    width="128px"
-                  />
+                  <img src="src/images/Sonne.png" alt="sunny" width="200px" />
                 </div>
-                <div class="col-3">
-                  <ul>
+                <div class="col-2">
+                  <ul class="weather-data">
                     <li>Stadt</li>
                     <li>Datum/Uhrzeit</li>
-                    <li>Temperatur in Celsius/Fahrenheit</li>
-                    <li>Zustand: Regen</li>
+                    <li>20°C</li>
+                    <li>Regen</li>
                     <li>Luftfeuchtigkeit</li>
                   </ul>
                 </div>
@@ -45,21 +40,23 @@
             <div class="weather-forecast-block"></div>
           </div>
           <div class="col-2">
-            <img
-              src="src/images/UGotAMessage.png"
-              alt="credence-balloon"
-              width="400px"
-            />
+            <div class="balloonimage">
+              <img
+                src="src/images/2weatherexpert.png"
+                alt="credence-balloon"
+                width="200px"
+              />
+            </div>
           </div>
         </div>
-        <small>
-          <a
-            href="https://github.com/Quaffi/BalloonIncWeatherService"
-            target="_blank"
-            >Open-source code </a
-          >by Stefanie Walch</small
-        >
       </div>
+      <p>
+        <a
+          href="https://github.com/Quaffi/BalloonIncWeatherService"
+          target="_blank"
+          >Open-source code </a
+        >by Stefanie Walch
+      </p>
     </div>
     <script src="src/app.js"></script>
   </body>
